// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox component behaviour becomes checked when clicked 1`] = `
<input
  checked={false}
  className="Checkbox"
  id="checkbox"
  name={null}
  onChange={[Function]}
  type="checkbox"
/>
`;

exports[`Checkbox component rendering renders Checkbox 1`] = `
<input
  checked={false}
  className="Checkbox"
  id="checkbox"
  name={null}
  onChange={[Function]}
  type="checkbox"
/>
`;

exports[`Checkbox component rendering renders Checkbox with props 1`] = `
<input
  checked={true}
  className="Checkbox"
  id="checkbox"
  name="test"
  onChange={[Function]}
  type="checkbox"
/>
`;
